// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > renders correctly as a horizontal-card with an error message 1`] = `
<div>
  <fieldset
    class="sc-bRKDuR bHjpxP sc-jJLAfE izsDDD"
  >
    <div
      class="sc-bRKDuR bHjpxP"
    >
      <div
        class="sc-kvnevz eXwXep"
      >
        <label
          class="sc-kcLKEh eyTHnd"
          data-testid="option1"
          for="MM_SMORES_9"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              checked=""
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_9"
              name="MM_SMORES_8"
              type="radio"
              value="option1"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR hlmzGy"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA da-dRhW"
              >
                Option 1
              </span>
            </div>
          </div>
        </label>
        <label
          class="sc-kcLKEh beawdA"
          data-testid="option2"
          for="MM_SMORES_10"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_10"
              name="MM_SMORES_8"
              type="radio"
              value="option2"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR fWvkiS"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA da-dRhW"
              >
                Option 2
              </span>
            </div>
          </div>
        </label>
        <label
          class="sc-kcLKEh beawdA"
          data-testid="option3"
          for="MM_SMORES_11"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_11"
              name="MM_SMORES_8"
              type="radio"
              value="option3"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR fWvkiS"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA da-dRhW"
              >
                Option 3
              </span>
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      class="sc-bRKDuR ezosON"
    >
      <span
        class="sc-bRKDuR bHjpxP sc-fhHczv dyULJc"
        color="strawberry"
        data-testid="warning-container"
        rotate="0"
        size="16"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 25 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.001 6a1 1 0 00-1 1v6a1 1 0 102 0V7a1 1 0 00-1-1zm0 10.005a1.003 1.003 0 000 2.005 1 1 0 001-1V17a.995.995 0 00-1-.995zm11.42-.503l-7.64-13.316A4.31 4.31 0 0012.001 0a4.31 4.31 0 00-3.78 2.186L.581 15.502a4.288 4.288 0 00.01 4.327A4.313 4.313 0 004.36 22h15.28a4.313 4.313 0 003.771-2.171 4.288 4.288 0 00.01-4.327zm-1.739 3.324A2.333 2.333 0 0119.642 20H4.361a2.331 2.331 0 01-2.042-1.174 2.306 2.306 0 01-.005-2.328l7.64-13.316A2.332 2.332 0 0112.001 2c.856 0 1.621.441 2.046 1.182l7.64 13.316c.418.73.417 1.6-.005 2.328z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="sc-bRKDuR bHjpxP sc-dTvVRJ hozFOv"
        cursor="inherit"
        title=""
      >
        This is an error message.
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`RadioGroup > renders correctly as a vertical-card with body copy 1`] = `
<div>
  <fieldset
    class="sc-bRKDuR bHjpxP sc-jJLAfE izsDDD"
  >
    <div
      class="sc-bRKDuR bHjpxP"
    >
      <div
        class="sc-kvnevz bRRMGI"
      >
        <label
          class="sc-kcLKEh cCbfrZ"
          data-testid="option1"
          for="MM_SMORES_5"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              checked=""
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_5"
              name="MM_SMORES_4"
              type="radio"
              value="option1"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR hrydBC"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA hSRrNX"
              >
                Option 1
              </span>
              <div
                class="sc-bRKDuR bHjpxP"
              >
                <p
                  class="sc-bRKDuR bHjpxP sc-dTvVRJ qDeEm"
                  cursor="inherit"
                  title=""
                >
                  This is the body copy for option 1.
                </p>
              </div>
            </div>
          </div>
        </label>
        <label
          class="sc-kcLKEh cWZLgV"
          data-testid="option2"
          for="MM_SMORES_6"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_6"
              name="MM_SMORES_4"
              type="radio"
              value="option2"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR ggSPLk"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA hSRrNX"
              >
                Option 2
              </span>
              <div
                class="sc-bRKDuR bHjpxP"
              >
                <p
                  class="sc-bRKDuR bHjpxP sc-dTvVRJ qDeEm"
                  cursor="inherit"
                  title=""
                >
                  This is the body copy for option 2.
                </p>
              </div>
            </div>
          </div>
        </label>
        <label
          class="sc-kcLKEh cWZLgV"
          data-testid="option3"
          for="MM_SMORES_7"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_7"
              name="MM_SMORES_4"
              type="radio"
              value="option3"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR ggSPLk"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA hSRrNX"
              >
                Option 3
              </span>
              <div
                class="sc-bRKDuR bHjpxP"
              >
                <p
                  class="sc-bRKDuR bHjpxP sc-dTvVRJ qDeEm"
                  cursor="inherit"
                  title=""
                >
                  This is the body copy for option 3.
                </p>
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`RadioGroup > renders correctly with default props 1`] = `
<div>
  <fieldset
    class="sc-bRKDuR bHjpxP sc-jJLAfE izsDDD"
  >
    <div
      class="sc-bRKDuR bHjpxP"
    >
      <div
        class="sc-kvnevz bRRMGI"
      >
        <label
          class="sc-kcLKEh bSQYCC"
          data-testid="option1"
          for="MM_SMORES_1"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              checked=""
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_1"
              name="MM_SMORES_0"
              type="radio"
              value="option1"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR hrydBC"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA hSRrNX"
              >
                Option 1
              </span>
            </div>
          </div>
        </label>
        <label
          class="sc-kcLKEh bSQYCC"
          data-testid="option2"
          for="MM_SMORES_2"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_2"
              name="MM_SMORES_0"
              type="radio"
              value="option2"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR ggSPLk"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA hSRrNX"
              >
                Option 2
              </span>
            </div>
          </div>
        </label>
        <label
          class="sc-kcLKEh bSQYCC"
          data-testid="option3"
          for="MM_SMORES_3"
        >
          <div
            class="sc-bRKDuR hUwRKL"
          >
            <input
              class="sc-hwkwBN knajmM"
              id="MM_SMORES_3"
              name="MM_SMORES_0"
              type="radio"
              value="option3"
            />
            <div
              class="sc-bRKDuR bqffzd sc-kNOymR ggSPLk"
            />
            <div
              class="sc-bRKDuR bHjpxP"
            >
              <span
                class="sc-dntSTA hSRrNX"
              >
                Option 3
              </span>
            </div>
          </div>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;
